--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,13 @@
+body {
+    background-color: white;
+}
+
+#root {
+    display: flex;
+    align-items: center;
+    height: 100vh;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -5,6 +15,48 @@
     width: 55%;
     background-color: rgb(54, 255, 4);
     background-image: url("../img/main_left_logo.png");
+}
+
+.modal_wrapper {
+    position: fixed;
+    top:0; left: 0; bottom: 0; right: 0;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.modal {
+    display: flex;
+    width: 45vh;
+    height: 58vh;
+    background-color: teal;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.main_wrapper_1 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 45%;
+    background-color: white;
+    padding-left: 4vh;
+}
+
+.main_top {
+    display: flex;
+    height: 95%;
 }
 
 .birdImg {
@@ -23,26 +75,6 @@
     padding-bottom: 8vh;
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 45%;
-    background-color: white;
-    padding-left: 4vh;
-}
-
-.main_wrapper_1 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
-.main_top {
-    display: flex;
-    height: 95%;
-}
 
 .main_text_wrapper {
     display: flex;
@@ -59,6 +91,15 @@
     font-size: 2.8vh;
     font-weight: 600;
     margin-bottom: 4vh;
+}
+
+.main_regist_text {
+    padding-top: 0.3vh;
+    font-size: 1.7vh;
+}
+
+.sign_up {
+    color:#00acee;
 }
 
 .main_bottom {
@@ -89,6 +130,15 @@
 .login_form_id:focus, .login_form_password:focus {
     border: none;
     outline: none;
+    background-color: rgb(211, 211, 211);
+}
+
+.login_form_id:focus::-webkit-input-placeholder, .login_form_password:focus::-webkit-input-placeholder {
+    color: transparent;
+}
+
+input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
 }
 
 .social_links {
