--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,9 +2,17 @@
     overflow-x: hidden; overflow-y: scroll;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+    cursor: inherit;
+}
+
 .nav, .home_right, .home_center {
     flex-grow: 1;
+    flex-basis: 0;
 }
+
 
 .nav {
     height: 100vh;
@@ -13,6 +21,49 @@
     border: 1px solid black;
     background-color: brown;
     text-align: right;
+}
+.nav_birdImg2 {
+    fill: #00acee;
+    width: 3.3vh;
+    padding-top: 1.5vh;
+}
+
+.nav_menu_wrapper1 {
+    position: relative;
+    height: 100%;
+}
+
+.nav_menu_wrapper2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    color: black;
+    text-align: left;
+    font-size: 2.4vh;
+}
+
+.nav_menu {
+    display: flex;
+    flex-direction: column;
+}
+
+.nav_menu > ul > li {
+    padding-top: 4vh;
+}
+
+.nav_icon {
+    width: 3vh;
+}
+
+.nav_menu_text {
+    margin-left: 20px;
+}
+
+.nav_home_wrapper, .nav_profile_wrapper {
+    display: flex;
+    align-items: center;
 }
 
 .home_center {
@@ -26,10 +77,6 @@
     top: 0;
     border: 1px solid black;
     background-color: gray;
-}
-
-.nav > ul {
-    padding-right: px;
 }
 
 .test {
