--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -14,10 +14,10 @@ a {
 }
 
 .nav {
+    border-right: 1px solid greenyellow;
     height: 100vh;
     position: sticky;
     top: 0;
-    border: 1px solid black;
     background-color: brown;
     text-align: right;
 }
@@ -66,16 +66,32 @@ a {
 }
 
 .home_center {
-    height: 100vh;
-    border: 1px solid black;
+    align-self: flex-start;
     background-color: burlywood;
 }
 
+.home_center_nweet_wrapper {
+    display: flex;
+    padding: 0 1.5vh 0 1.5vh;
+}
+
+.home_center_nweet_profile_img {
+    padding-top: 1.5vh;
+}
+
+.home_center_homebar {
+    border-bottom: 2px solid black;
+}
+
+.home_center_bottom {
+    border-top: 2px solid black;
+}
+
 .home_right {
+    border-left: 1px solid greenyellow;
     height: 100vh;
     position: sticky;
     top: 0;
-    border: 1px solid black;
     background-color: gray;
 }
 
