--- a/src/components/Nweets/NweetFactory.css
+++ b/src/components/Nweets/NweetFactory.css
@@ -1,36 +1,56 @@
-.hidden {
-    display: none;
-}
-
 .nweet_factory_form {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 20vh;
-}
-
-.nweet_factory_form_top, .nweet_factory_form_bottom {
-    width: 100%;
+    height: 6vh;
 }
 
 .nweet_factory_form_top {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex: 3;
 }
 
-.nweet_factory_form_bottom {
+.nweet_factory_right {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
     flex: 1;
+    padding-left: 1.5vh;
 }
 
-.nweet_factory_text {
+.nweet_factory_nweet_wrapper {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.placeholder {
+    z-index: 0;
+    position: absolute;
+    color: rgb(255, 0, 0);
+}
+
+.nweet_factory_nweet_text {
+    display: inline-block;
+    z-index: 1;
+    font-size: 2.2vh;
+    padding: 3vh 0 3vh 0;
+    max-width: 100%;
     border: none;
+    outline: none;
     border-bottom: 2px solid #EFF3F4;
+}
+
+.nweet_factory_form_bottom {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+    border-top: 2px solid gray;
 }
 
 .nweet_factory_nweet {
@@ -47,6 +67,6 @@
 
 .icon {
     cursor: pointer;
-    width: 2.2vh;
+    width: 2.3vh;
     fill: #00acee;
 }
