--- a/src/components/Nweets/NweetFactory.css
+++ b/src/components/Nweets/NweetFactory.css
@@ -30,15 +30,19 @@
 .placeholder {
     z-index: 0;
     position: absolute;
-    color: rgb(255, 0, 0);
+    color: red;
+    min-height: 3vh;
+    font-size: 2.2vh;
 }
 
 .nweet_factory_nweet_text {
     display: inline-block;
     z-index: 1;
+    flex: 1;
     font-size: 2.2vh;
     padding: 3vh 0 3vh 0;
     max-width: 100%;
+    min-height: 3vh;
     border: none;
     outline: none;
     border-bottom: 2px solid #EFF3F4;
@@ -53,16 +57,31 @@
     border-top: 2px solid gray;
 }
 
-.nweet_factory_nweet {
+.nweet_factory_nweet_on {
     line-height: 3.5vh;
-    padding-right: 1.5vh;
-    padding-left: 1.5vh;
-    font-size: 1.7vh;
+    padding-right: 1.6vh;
+    padding-left: 1.6vh;
+    font-size: 1.6vh;
     font-weight: bold;
     border-radius: 50vh;
     color: white;
     background: #00acee;
     border: 1px solid #00acee;
+    cursor: pointer;
+}
+
+.nweet_factory_nweet_off {
+    line-height: 3.5vh;
+    padding-right: 1.6vh;
+    padding-left: 1.6vh;
+    font-size: 1.6vh;
+    font-weight: bold;
+    border-radius: 50vh;
+    color: white;
+    background: #00acee;
+    border: 1px solid #00acee;
+    opacity: 0.5;
+    pointer-events: none;
 }
 
 .icon {
