--- a/src/components/Profile/EditProfile.css
+++ b/src/components/Profile/EditProfile.css
@@ -1,6 +1,30 @@
+.edit_profile_modal_wrapper {
+    z-index: 10;
+    position: fixed;
+    top:0; left: 0; bottom: 0; right: 0;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.edit_profile_modal {
+    display: flex;
+    flex-direction: column;
+    width: 60vh;
+    height: 60vh;
+    background-color: rgb(13, 0, 128);
+    position: fixed;
+    border-radius: 0vh;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 .edit_profile_menu_wrapper {
     display: flex;
-    flex: 0.2;
+    flex: 0.1;
     width: 100%;
     align-items: center;
     justify-content: space-between;
@@ -18,9 +42,12 @@
 }
 
 .edit_profile_content {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     background-color: darkorange;
-    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
     overflow-y: scroll;
     overflow-x: hidden;
     border-bottom-left-radius: 2vh;
@@ -28,8 +55,23 @@
     z-index: 4;
 }
 
+.edit_profile_top_wrapper {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1;
+    background-color: chartreuse;
+}
+
+.edit_profile_bottom_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1;
+    background-color: cadetblue;
+}
+
 /*Scroll bar nav*/
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 15px;
     height: 15px;
     background-color: white;
@@ -62,4 +104,4 @@
     width: auto;
     height: auto;
     background-color: red;
-}
+} */
