--- a/src/components/Nweets/NweetFactory.css
+++ b/src/components/Nweets/NweetFactory.css
@@ -1,17 +1,9 @@
 .nweet_factory_form {
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 6vh;
-}
-
-.nweet_factory_form_top {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex: 3;
 }
 
 .nweet_factory_right {
@@ -30,9 +22,9 @@
 .placeholder {
     z-index: 0;
     position: absolute;
-    color: red;
+    color: #536471;
     min-height: 3vh;
-    font-size: 2.2vh;
+    font-size: 2vh;
 }
 
 .nweet_factory_nweet_text {
@@ -45,8 +37,18 @@
     min-height: 3vh;
     border: none;
     outline: none;
-    border-bottom: 2px solid #EFF3F4;
     word-break: break-all;
+}
+
+.nweet_factory_attachmentImg {
+    width: 57vh;
+    height: 32vh;
+}
+
+.nweet_factory_attachmentImg > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .nweet_factory_form_bottom {
@@ -55,7 +57,6 @@
     justify-content: space-between;
     align-items: center;
     flex: 1;
-    border-top: 2px solid gray;
 }
 
 .nweet_factory_nweet_on {
