--- a/src/routes/Aside.css
+++ b/src/routes/Aside.css
@@ -24,6 +24,10 @@
     background-color: tomato;
 }
 
+.aside_left_search {
+    background-color: #EFF3F4;
+}
+
 .aside_right {
     background-color: green;
 }
