--- a/src/routes/Aside.css
+++ b/src/routes/Aside.css
@@ -1,4 +1,6 @@
 .aside {
+    flex-grow: 1.15;
+    flex-basis: 0;
     display: flex;
     border-left: 1px solid #EFF3F4;
     height: 100vh;
@@ -10,7 +12,7 @@
 .aside_wrapper {
     display: flex;
     flex: 1;
-    padding: 0 3.5vh 0 3.5vh;
+    padding: 0 3vh 0 3vh;
 }
 
 .aside_left, .aside_right {
@@ -20,14 +22,63 @@
 .aside_left {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    background-color: tomato;
 }
 
 .aside_left_search {
+    width: 36.5vh;
     background-color: #EFF3F4;
+    border-radius: 10vh;
 }
 
-.aside_right {
-    background-color: green;
+.aside_left_search > label {
+    padding: 1.3vh 0 1.3vh 0;
+    display: flex;
+    align-items: center;
+    cursor: text;
+    border: 1px solid #EFF3F4;
+}
+
+.aside_left_search_left {
+    text-align: center;
+    flex: 1;
+}
+
+.aside_left_search_left > svg {
+    fill: #787a88;
+    width: 2vh;
+}
+
+.aside_left_search_center {
+    flex: 1;
+}
+
+.aside_left_search_input {
+    padding-top: 0.15vh;
+    border: none;
+    width: 24vh;
+    font-size: 1.8vh;
+    background-color: transparent;
+}
+
+.aside_left_search_input::placeholder {
+    font-size: 1.7vh;
+}
+
+.aside_left_search_input:focus {
+    outline: none; 
+}
+
+.aside_left_search_right {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+}
+
+.aside_left_search_right > span {
+    padding: 1.1vh 1.1vh 1.1vh 1.1vh;
+    border-radius: 50%;
+    background-color: #00acee;
+    cursor: pointer;
 }
