--- a/src/routes/Navigation.css
+++ b/src/routes/Navigation.css
@@ -1,4 +1,6 @@
 .nav {
+    flex-grow: 0.95;
+    flex-basis: 0;
     border-right: 1px solid #EFF3F4;
     height: 100vh;
     position: sticky;
@@ -10,7 +12,7 @@
 .nav_birdImg2 {
     fill: #00acee;
     width: 3.3vh;
-    padding-top: 1.5vh;
+    padding: 1.5vh 0 0 1vh;
 }
 
 .nav_menu_wrapper1 {
@@ -26,7 +28,7 @@
     height: 100%;
     color: black;
     text-align: left;
-    font-size: 2.4vh;
+    font-size: 2.2vh;
 }
 
 .nav_menu {
@@ -35,7 +37,7 @@
 }
 
 .nav_menu > ul > li {
-    padding-top: 4vh;
+    padding-top: 2.5vh;
 }
 
 .nav_home_icon, .nav_profile_icon {
@@ -49,4 +51,12 @@
 .nav_home_wrapper, .nav_profile_wrapper {
     display: flex;
     align-items: center;
+    cursor: pointer;
+    padding: 1vh 0 1vh 2vh;
 }
+
+.nav_profile_wrapper:hover, .nav_home_wrapper:hover{
+
+    background-color: gray;
+}
+
