--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -18,11 +18,6 @@ a {
     background-color: white;
 }
 
-/* .home_center_wrapper {
-    overflow-x: hidden; 
-    overflow-y: hidden;
-} */
-
 .home_center_homebar_wrapper {
     z-index: 2;
     background-color: white;
@@ -43,6 +38,10 @@ a {
     flex: 1;
 }
 
+.star {
+    font-size: 2.5vh;
+}
+
 .home_center_homebar > span {
     z-index: 3;
     display: flex;
@@ -50,6 +49,81 @@ a {
     font-size: 2vh;
     font-weight: bold;
 }
+
+.home_center_homebar_menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    width: 35vh;
+    height: 22vh;
+    right: 0;
+    top: 0;
+    margin-right: 1vh;
+    margin-top: 1vh;
+    background-color: white;
+    box-shadow: 0 0 0.5vh 0.1vh rgba(128, 128, 128, 0.37);
+    border-radius: 0.5vh;
+    animation-duration: 0.03s;
+    animation-name: slideTopToBot;
+}
+
+@keyframes slideTopToBot {
+    from {
+        height: 16vh;
+    }
+
+    to {
+        height: 22vh;
+    }
+}
+
+.home_center_homebar_menu_top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+    cursor: auto;
+}
+
+.home_center_homebar_menu_top > span {
+    font-size: 2.15vh;
+    text-align: center;
+    font-weight: bold;
+    padding: 4.5vh 1.5vh 1.5vh 1.5vh;
+    line-height: 2.5vh;
+}
+
+.home_center_homebar_menu_bottom {
+    display: flex;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+    border-top: 1px solid #EFF3F4;
+}
+
+.home_center_homebar_menu_bottom:hover {
+    background-color: #f3f3f3;
+}
+
+.home_center_homebar_menu_bottom > svg {
+    width: 2vh;
+    fill: #646464;
+    padding-left: 2.5vh;
+}
+
+.home_center_homebar_menu_bottom_text {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.5vh;
+}
+
+.ola {
+    color: gray;
+    font-size: 1.45vh;
+    padding-top: 1vh;
+}
+
 
 .home_center_nweet_wrapper {
     display: flex;
