--- a/src/components/Nweets/Nweet.css
+++ b/src/components/Nweets/Nweet.css
@@ -8,9 +8,10 @@
 }
 
 .nweet_left > img {
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
+  width: 55px;
+  height: 55px;
+  object-fit: cover;
+  border-radius: 25px;
 }
 
 .nweet_right {
@@ -129,7 +130,7 @@
 }
 
 .nweet_content_img_wrapper {
-    padding-top: 1vh;
+    padding: 1vh 0 1vh 0;
     width: 55vh;
     height: 32vh;
 }
