--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -135,7 +135,8 @@ a {
 }
 
 .home_center_nweet_profile_img > img {
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
+    object-fit: cover;
     border-radius: 25px;
 }
