--- a/src/components/Nweets/NweetFactory.css
+++ b/src/components/Nweets/NweetFactory.css
@@ -17,6 +17,7 @@
     display: flex;
     align-items: center;
     position: relative;
+    min-height: 8vh;
 }
 
 .placeholder {
@@ -28,16 +29,22 @@
 }
 
 .nweet_factory_nweet_text {
-    display: inline-block;
-    z-index: 1;
-    flex: 1;
-    font-size: 2.2vh;
-    padding: 3vh 0 3vh 0;
-    max-width: 100%;
-    min-height: 3vh;
-    border: none;
-    outline: none;
-    word-break: break-all;
+  display: inline-block;
+  z-index: 1;
+  flex: 1;
+  font-size: 2.2vh;
+  padding: 3vh 0 3vh 0;
+  max-width: 100%;
+  min-height: 3vh;
+  border: none;
+  outline: none;
+  word-break: break-all;
+  line-height: 110%;
+}
+
+.testing1 {
+  max-width: 100%;
+  z-index: 5;
 }
 
 .nweet_factory_attachmentImg {
