--- a/src/routes/Aside.css
+++ b/src/routes/Aside.css
@@ -22,13 +22,13 @@
 .aside_left {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    padding: 0.4vh 0 0.4vh 0;
 }
 
-.aside_left_search {
+.aside_left_search, .aside_left_trend, .aside_left_follow_recommend, .aside_left_footer {
     width: 36.5vh;
-    border-radius: 10vh;
 }
 
 .label_out {
@@ -104,4 +104,126 @@
 
 .test1 > span {
     padding-left: 5vh;
+}
+
+.aside_left_trend {
+  display: flex;
+  background-color: #EFF3F4;
+  border-radius: 1vh;
+  height: 48vh;
+}
+
+.aside_left_trend_wrapper {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 0.8vh 1.5vh 1.5vh 1.5vh;
+}
+
+.aside_left_trend_top {
+  display: flex;
+  justify-content: space-between;
+  flex: 0.15;
+  padding-right: 1vh;
+}
+
+.aside_left_trend_top > span:first-child{
+  font-size: 2vh;
+  font-weight: bold;
+  padding-top: 0.7vh;
+}
+
+.trend_setting_icon {
+  width: 2.1vh;
+  padding: 0.7vh;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.trend_setting_icon:hover {
+  background-color: #dddddd;
+}
+
+
+.aside_left_trend_center {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(155, 209, 101);
+  flex: 1;
+}
+
+.aside_left_trend_2, .aside_left_trend_3, .aside_left_trend_4, .aside_left_trend_5 {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.trend_top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.trend_remainder {
+  display: flex;
+  flex-direction: column;
+}
+
+.aside_left_trend_bot {
+  flex: 0.1;
+}
+
+.aside_left_follow_recommend {
+  display: flex;
+  background-color: #EFF3F4;
+  border-radius: 1vh;
+  height: 32vh;
+}
+
+.aside_left_follow_wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  padding: 1.5vh;
+}
+
+.aside_left_follow_top {
+  flex: 0.8;
+  background-color: brown;
+}
+
+.aside_left_follow_top > span {
+  font-size: 2vh;
+  font-weight: bold;
+}
+
+.aside_left_follow_content {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2vh;
+  background-color: aquamarine;
+}
+
+.follow_content_user {
+  display: flex;
+}
+
+.follow_content_user_info {
+  display: flex;
+  padding-left: 1vh;
+  flex-direction: column;
+}
+
+.aside_left_footer {
+  display: flex;
+  align-items: center;
+  height: 8vh;
+}
+
+.aside_left_footer > span {
+  display: inline-block;
+  color: #677681;
+  padding-bottom: 4vh;
+  font-size: 1.46vh;
+  line-height: 130%;
 }
