--- a/src/routes/Navigation.css
+++ b/src/routes/Navigation.css
@@ -12,7 +12,7 @@
 .nav_birdImg2 {
     fill: #00acee;
     width: 3.3vh;
-    padding: 1.5vh 0 0 1vh;
+    padding: 1.5vh 0 0 1.5vh;
 }
 
 .nav_menu_wrapper1 {
@@ -21,14 +21,16 @@
 }
 
 .nav_menu_wrapper2 {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    color: black;
-    text-align: left;
-    font-size: 2.2vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  color: black;
+  font-size: 2.2vh;
 }
 
 .nav_menu {
@@ -36,7 +38,7 @@
     flex-direction: column;
 }
 
-.nav_menu > ul > li {
+.nav_menu > ul {
     padding-top: 2.5vh;
 }
 
@@ -51,12 +53,17 @@
 .nav_home_wrapper, .nav_profile_wrapper {
     display: flex;
     align-items: center;
-    cursor: pointer;
-    padding: 1vh 0 1vh 2vh;
 }
 
-.nav_profile_wrapper:hover, .nav_home_wrapper:hover{
+.nav_profile, .nav_home {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  border-radius: 10vh;
+  padding: 1.5vh;
+}
 
-    background-color: gray;
+.nav_profile:hover, .nav_home:hover{
+    background-color: #dbdbdb;
 }
 
