--- a/src/components/Profile/EditProfile.css
+++ b/src/components/Profile/EditProfile.css
@@ -1,40 +1,43 @@
 .edit_profile_modal_wrapper {
-    z-index: 10;
-    position: fixed;
-    top:0; left: 0; bottom: 0; right: 0;
-    background: rgba(0, 0, 0, 0.8);
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 .edit_profile_modal {
-    display: flex;
-    flex-direction: column;
-    width: 65vh;
-    height: 70vh;
-    position: fixed;
-    border-radius: 0vh;
-    top: 50%;
-    left: 50%;
-    background-color: white;
-    border-radius: 2vh;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  width: 65vh;
+  height: 70vh;
+  position: fixed;
+  border-radius: 0vh;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  border-radius: 2vh;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .edit_profile_menu_wrapper {
-    display: flex;
-    flex: 0.08;
-    padding: 0 2vh 0 2vh;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    border-top-left-radius: 2vh;
-    border-top-right-radius: 2vh;
-    background-color: white;
-    z-index: 4;
+  display: flex;
+  flex: 0.08;
+  padding: 0 2vh 0 2vh;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  border-top-left-radius: 2vh;
+  border-top-right-radius: 2vh;
+  background-color: white;
+  z-index: 4;
 }
 
 .edit_profile_menu_left {
@@ -124,25 +127,26 @@
   background-color: transparent;
 }
 
-.edit_profile_img_circle{
+.edit_profile_img_circle {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 90%;
   height: 90%;
-  background-color: #CFD9DE;
+  background-color: #cfd9de;
   border-radius: 50%;
   border: 4px solid white;
 }
 
-.edit_profile_img_circle > img{
+.edit_profile_img_circle > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
 }
 
-.edit_profile_img_label, .edit_profile_background_label{
+.edit_profile_img_label,
+.edit_profile_background_label {
   position: absolute;
   cursor: pointer;
 }
@@ -186,7 +190,7 @@
   height: 7.5vh;
 }
 
-.edit_profile_nickname_wrapper, 
+.edit_profile_nickname_wrapper,
 .edit_profile_state_msg_wrapper {
   border: 1px solid #cccccc;
   border-radius: 3px;
@@ -200,7 +204,7 @@
   font-size: 1.7vh;
 }
 
-.edit_profile_nickname> input:focus,
+.edit_profile_nickname > input:focus,
 .edit_profile_state_msg > textarea:focus {
   outline: none;
 }
